--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=EmployeeManagementSystem
+server.port=8084
+spring.datasource.url=jdbc:mysql://localhost:3306/empsystem-db?createDatabaseIfNotExist=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=root
+spring.datasource.password=
